Alignment Fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+.App-header {
+  background-color:rgb(36, 36, 36);
+}
+
+.App-header-h1 {
+  color: white;
+  text-align: center;
+  font-size: 2.5em;
+  margin: 0px;
+}
+
 .content {
   background-color:rgb(36, 36, 36);
   width: 100vw;
@@ -14,7 +25,7 @@
 
 .main-canvas {
   display: block;
-  margin: 25px auto;
+  margin: 0px auto;
 }
 
 .videos {
